[gd_scene load_steps=3 format=3 uid="uid://1g8d70nb8a3d"]

[ext_resource type="Script" path="res://entities/player_area.gd" id="1_y5c3r"]
[ext_resource type="Resource" uid="uid://c0r4qluwtcipc" path="res://resources/PlayerData.tres" id="2_mga27"]

[node name="PlayerArea" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5c3r")
player = ExtResource("2_mga27")

[node name="DrawingPile" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="DiscardPile" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="Hand" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(2.08165e-12, 50)

[node name="HBoxContainer" type="HBoxContainer" parent="Hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="Hand/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EntTurnButton" type="Control" parent="Hand/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="Hand/HBoxContainer/EntTurnButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.5
offset_top = -15.5
offset_right = 9.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(10, 30)
text = "End"
